# dashboard_diversas

./: pyproject.toml
dashboard_diversas/: 1_💡_INSIGHTS.py
dashboard_diversas/config/: config_interface.py  utils.py
dashboard_diversas/data/tratado/2024/final/: dado_final-07.csv  dado_final-08.csv  dado_final-09.csv  dado_final-10.csv  dado_final-11.csv  dado_final-12.csv
dashboard_diversas/data/tratado/2024/intermediario/desconto/: TRATADO_2024.csv
dashboard_diversas/data/tratado/2024/intermediario/relatorio/: relatorio_tratado.csv
dashboard_diversas/pages/: 2_📦_ESTATISTICAS_POR_PRODUTO.py  3_🏬_ESTATISTICAS_POR_LOJA.py  4_🏆_RESULTADOS.py
