[tool.poetry]
name = "dashboard-diversas"
version = "0.1.0"
description = ""
authors = ["Levi Serrano <lvserrano@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.42.0"
pandas = "^2.2.3"
plotly = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
